# par2cmdline

./: .gitignore  CMakeLists.txt
src/: libpar2.h  par2cmdline.cpp
